--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 			margin: 0;
 			width: 100vw;
 			font-family: 'Rubik', sans-serif;
-			font-size: 18px;
+/* 			font-size: 18px; */
 			background-color: grey;
 			overflow: hidden;
 			letter-spacing: 1px;
