fixed some styling

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
 			margin: 0;
 			width: 100vw;
 			font-family: 'Rubik', sans-serif;
-			font-size: 1rem;
+			font-size: 18px;
 			background-color: grey;
 			overflow: hidden;
 			letter-spacing: 1px;
@@ -33,14 +33,13 @@ html, body {
 		}
 		.back-img {
 			width: 100%;
-			height: 40vh;
-			/*background-image: url('./pattern-bg.png');*/
+			height: 45vh;
+
 			background: #0f0c29;  /* fallback for old browsers */
 			background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
 			background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-			/*background-size: cover;*/
+			background-image: url('./pattern-bg.png');
+			background-size: cover;
 		}
 		.search-line {
 			display: flex;
@@ -58,7 +57,7 @@ html, body {
 			padding: 10px;
 			border-radius: 10px 0px 0px 10px;
 			font-family: 'Rubik', sans-serif;
-			font-size: 18px;
+			font-size: 1rem;
 			border-width: 0px;
 			background-color: rgba(255,255,255,0.1);
 			border:  1px solid rgba(255,255,255,0.5);
@@ -86,6 +85,12 @@ html, body {
 			border-right:  1px solid rgba(255,255,255,0.2);
 			border-bottom:  1px solid rgba(255,255,255,0.2);
 			backdrop-filter: blur(5px);
+
+		}
+
+		.search-line button:hover {
+			background-color: rgba(255,255,255,0.8);
+			cursor: pointer;
 		}
 		textarea:focus, input:focus{
     		outline: none;
@@ -121,10 +126,19 @@ html, body {
 			width: 50%;
 			border: red 2px;
 			color: white;
+			text-align: left;
+			margin: 10px;
+		}
+
+		.box h5 {
+			font-weight: 700;
+			color: white;
+			font-size: 0.8rem;
 		}
 
 		.box span{
 			color: white;
+			font-size: 2rem;
 			/*color: #0f0c29;*/
 		}
 
